// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compute-element-view > view of cloud 1`] = `
{
  "_stage": "computed",
  "_type": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "description": null,
  "edges": [
    {
      "color": "gray",
      "head": "normal",
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "line": "dashed",
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "color": "gray",
      "head": "normal",
      "id": "support:cloud.frontend",
      "label": "manages",
      "line": "dashed",
      "parent": null,
      "relations": [
        "support:cloud.frontend.supportPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "color": "gray",
      "head": "normal",
      "id": "cloud.frontend:cloud.backend",
      "kind": "graphlql",
      "label": "requests",
      "line": "dashed",
      "parent": "cloud",
      "relations": [
        "cloud.frontend:cloud.backend",
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.supportPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "tags": [
        "next",
        "old",
      ],
      "tail": "odiamond",
      "target": "cloud.backend",
    },
    {
      "color": "gray",
      "head": "normal",
      "id": "cloud.backend:email",
      "label": "schedule",
      "line": "dashed",
      "parent": null,
      "relations": [
        "cloud.backend:email",
      ],
      "source": "cloud.backend",
      "tags": [
        "communication",
      ],
      "target": "email",
    },
    {
      "color": "gray",
      "head": "normal",
      "id": "cloud.backend:amazon",
      "label": "uploads",
      "line": "dashed",
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tags": [
        "aws",
        "storage",
        "legacy",
      ],
      "target": "amazon",
    },
  ],
  "hash": "31d44928cf5357b5106cce52d171689c26ccca9a",
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "short description",
      },
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "modelRef": "customer",
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "description",
      },
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "modelRef": "support",
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "system",
      "level": 0,
      "links": null,
      "modelRef": "cloud",
      "outEdges": [
        "cloud.backend:email",
        "cloud.backend:amazon",
      ],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [
        "next",
        "old",
      ],
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "container",
      "level": 1,
      "links": null,
      "modelRef": "cloud.frontend",
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "shape": "browser",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "container",
      "level": 1,
      "links": null,
      "modelRef": "cloud.backend",
      "outEdges": [
        "cloud.backend:email",
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "email",
      "inEdges": [
        "cloud.backend:email",
      ],
      "kind": "system",
      "level": 0,
      "links": null,
      "modelRef": "email",
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "email",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "icon": "tech:aws",
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "level": 0,
      "links": null,
      "modelRef": "amazon",
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [
        "aws",
      ],
      "technology": null,
      "title": "amazon",
    },
  ],
  "summary": null,
  "tags": null,
  "title": null,
  "viewOf": "cloud",
}
`;

exports[`compute-element-view > view of cloud.frontend 1`] = `
{
  "_stage": "computed",
  "_type": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "description": null,
  "edges": [
    {
      "color": "gray",
      "head": "normal",
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "line": "dashed",
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "color": "gray",
      "head": "normal",
      "id": "support:cloud.frontend.supportPanel",
      "label": "manages",
      "line": "dashed",
      "parent": null,
      "relations": [
        "support:cloud.frontend.supportPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.supportPanel",
    },
    {
      "color": "gray",
      "head": "normal",
      "id": "cloud.frontend.dashboard:cloud.backend",
      "kind": "graphlql",
      "label": "requests",
      "line": "solid",
      "parent": null,
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "tags": [
        "next",
      ],
      "target": "cloud.backend",
    },
    {
      "color": "gray",
      "head": "normal",
      "id": "cloud.frontend.supportPanel:cloud.backend",
      "kind": "graphlql",
      "label": "fetches",
      "line": "dashed",
      "parent": null,
      "relations": [
        "cloud.frontend.supportPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.supportPanel",
      "tags": [
        "old",
      ],
      "tail": "odiamond",
      "target": "cloud.backend",
    },
  ],
  "hash": "ab0c1f3a6b4ad420705e253bf5cdd3b3734ed987",
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "short description",
      },
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "modelRef": "customer",
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "description",
      },
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "modelRef": "support",
      "outEdges": [
        "support:cloud.frontend.supportPanel",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend.dashboard",
        "cloud.frontend.supportPanel",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.supportPanel",
      ],
      "kind": "container",
      "level": 0,
      "links": null,
      "modelRef": "cloud.frontend",
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend",
        "cloud.frontend.supportPanel:cloud.backend",
      ],
      "parent": null,
      "shape": "browser",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "icon": "tech:react",
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "level": 1,
      "links": null,
      "modelRef": "cloud.frontend.dashboard",
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend",
      ],
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [
        "next",
      ],
      "technology": null,
      "title": "dashboard",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.supportPanel",
      "inEdges": [
        "support:cloud.frontend.supportPanel",
      ],
      "kind": "component",
      "level": 1,
      "links": null,
      "modelRef": "cloud.frontend.supportPanel",
      "outEdges": [
        "cloud.frontend.supportPanel:cloud.backend",
      ],
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [
        "old",
      ],
      "technology": null,
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend",
        "cloud.frontend.supportPanel:cloud.backend",
      ],
      "kind": "container",
      "level": 0,
      "links": null,
      "modelRef": "cloud.backend",
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "backend",
    },
  ],
  "summary": null,
  "tags": null,
  "title": null,
  "viewOf": "cloud.frontend",
}
`;
